--- a/CSEd-SE-network-analysis.rmd
+++ b/CSEd-SE-network-analysis.rmd
@@ -6,6 +6,7 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
+usethis::use_git_ignore(c("*.csv", "*.rds"))
 knitr::opts_chunk$set(include=TRUE, echo=TRUE, message=FALSE)
 ```
 
